<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mylayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/indigo500"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp"/>

    <com.appyvet.rangebar.RangeBar
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rangebar1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        custom:pinMaxFont="10sp"
        custom:selectorBoundaryColor="@color/accent"
        custom:selectorBoundarySize="2dp"
        custom:selectorSize="10dp"
        custom:temporaryPins="false"
        custom:tickEnd="10"
        custom:tickInterval="1"
        custom:tickStart="5"/>

    <include
        layout="@layout/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/leftIndex"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/leftIndex"/>

                    <EditText
                        android:id="@+id/leftIndexValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/leftIndexValue"
                        android:textSize="35sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rightIndex"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:text="@string/rightIndex"/>

                    <EditText
                        android:id="@+id/rightIndexValue"
                        style="@style/RoboTheme"
                        android:layout_marginTop="0dp"
                        android:inputType="number"
                        android:text="@string/rightIndexValue"
                        android:textSize="35sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/setIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/indexSet"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="16sp"
                        />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/setValue"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/valueSet"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="16sp"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/enableRange"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/toggle_range"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="16sp"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/disable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="disable"
                        android:textAllCaps="true"
                        android:textColor="@color/accent"
                        android:textSize="16sp"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/tickStart"
                style="@style/RoboTheme"
                android:text="@string/tickStart"/>

            <SeekBar
                android:id="@+id/tickStartSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="5"/>

            <TextView
                android:id="@+id/tickEnd"
                style="@style/RoboTheme"
                android:text="@string/tickEnd"/>

            <SeekBar
                android:id="@+id/tickEndSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="10"/>

            <TextView
                android:id="@+id/tickInterval"
                style="@style/RoboTheme"
                android:text="@string/tickInterval"/>

            <SeekBar
                android:id="@+id/tickIntervalSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:progress="10"/>

            <TextView
                android:id="@+id/barWeight"
                style="@style/RoboTheme"
                android:text="@string/barWeight"/>

            <SeekBar
                android:id="@+id/barWeightSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="2"/>

            <TextView
                android:id="@+id/connectingLineWeight"
                style="@style/RoboTheme"
                android:text="@string/connectingLineWeight"/>

            <SeekBar
                android:id="@+id/connectingLineWeightSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="4"/>

            <TextView
                android:id="@+id/thumbRadius"
                style="@style/RoboTheme"
                android:text="@string/thumbRadius"/>

            <SeekBar
                android:id="@+id/thumbRadiusSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="30"/>

            <TextView
                android:id="@+id/thumbBoundarySize"
                style="@style/RoboTheme"
                android:text="@string/selectorBoundarySize"/>

            <SeekBar
                android:id="@+id/thumbBoundarySeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="6"
                android:progress="1"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/tickColor"
                        style="@style/button"
                        android:text="@string/tickColorNormal"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/pinColor"
                        style="@style/button"
                        android:text="@string/thumbColorNormal"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/selectorColor"
                        style="@style/button"
                        android:text="@string/selectorColorNormal"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/textColor"
                        style="@style/button"
                        android:text="@string/textColorNormal"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/connectingLineColor"
                        style="@style/button"
                        android:text="@string/connectingLineColor"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/barColor"
                        style="@style/button"
                        android:text="@string/barColor"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/button_holder">

                    <TextView
                        android:id="@+id/selectorBoundaryColor"
                        style="@style/button"
                        android:text="@string/selectorBoundaryColor"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
